# zdict

./: .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  base_benchmark.py  install_local.sh  pyproject.toml  requirements.dev  requirements.test  run_base_benchmark.sh  setup.cfg  setup.py  tag_release.sh  test.sh
benchmarks/: base_benchmark.py  dict_vs_zdict.py
examples/: demo.py
scripts/: code-to-md.py  publish.sh
tests/: test_zdict.py
zdict/: __init__.py  _zdictcore.c  swisstbl.c  swisstbl.h
zdict/_zdict_modes/: arena.c  immutable.c  insert.c  mutable.c  readonly.c  zdict_internal.h
