[metadata]
name = zdict
author = Aditya Patange (AdiPat)
author_email = aditya.patange@thehackersplaybook.org
description = Blazing-fast, drop-in replacement for Python's built-in dict with multiple high-performance modes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AdiPat/zdict
project_urls =
    Bug Tracker = https://github.com/AdiPat/zdict/issues
    Documentation = https://github.com/AdiPat/zdict#readme
    Source Code = https://github.com/AdiPat/zdict
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
where = .
exclude =
    tests*
    benchmarks*
    docs*
    build*
    dist*
    *.egg-info*

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov>=2.12
    black>=22.0
    flake8>=4.0
    mypy>=0.910
    cibuildwheel>=2.0
    twine>=4.0
benchmark =
    pyperf>=2.0
    matplotlib>=3.5
    immutables>=0.15
    frozendict>=2.3
test =
    pytest>=6.0
    pytest-cov>=2.12

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    .venv,
    .mypy_cache,
    .pytest_cache

[coverage:run]
source = zdict
omit = 
    */tests/*
    */test_*
    setup.py
    conftest.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING: